package lld.bookmyshow;

public enum BookingStatus {
    PENDING, CONFIRMED, CANCELLED
}
