package lld.bookmyshow;

public enum SeatType {
    PREMIUM, REGULAR
}
